--- a/index-0002.html
+++ b/index-0002.html
@@ -267,7 +267,7 @@
 <body>
     <div class="nav-container">
         <nav class="navbar" id="navbar">
-            <a href="index.html" class="logo">
+            <a href="/index.html" class="logo">
                 <i class="fas fa-cannabis"></i> StrainNavigator
             </a>
             <ul class="nav-links" id="navLinks">
