--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
             </div>
             
             <div class="feature-card">
-                <div class="feature-img" style="background-image: url('/tools/strains/myb-bx1-0001.jpg.jpg');"></div>
+                <div class="feature-img" style="background-image: url('/tools/strains/myb-001.jpg');"></div>
                 <div class="feature-content">
                     <h3>Strain Tracker</h3>
-                    <p>AI Powered Strain Tracker. Talk conversationally and have it add or edit strain information.</p>
+                    <p>AI Powered Strain Tracker. Talk conversationally to have it add or edit strain information or use manual input.</p>
                     <a href="/tools/tracker.html" class="feature-link">AI Strain Tracker &rarr;</a>
                 </div>
             </div>			
@@ -311,7 +311,7 @@
             <div class="feature-card">
                 <div class="feature-img" style="background-image: url('/tools/strains/hwm-s1-001.jpg');"></div>
                 <div class="feature-content">
-                    <h3>Strain Tracker</h3>
+                    <h3>Explore Strains</h3>
                     <p>Browse through our private strain database, track lineage, view parent/child relationships, and add your own custom strains with detailed information.</p>
                     <a href="/tools/seeds.html" class="feature-link">Explore Strains &rarr;</a>
                 </div>
