--- a/index-0003.html
+++ b/index-0003.html
@@ -331,7 +331,7 @@
                 <div class="feature-content">
                     <h3>Grow Space Manager</h3>
                     <p>Set up virtual grow tents, schedule lighting, track conditions, and monitor your plants throughout their lifecycle in our interactive grow simulator.</p>
-                    <a href="/tools/growgame.html" class="feature-link">Manage Grow &rarr;</a>
+                    <a href="/tools/growitgame.html" class="feature-link">Manage Grow &rarr;</a>
                 </div>
             </div>
         </section>
