--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <ul class="nav-links" id="navLinks">
                 <li><a href="/tools/growhelp.html">AI Grow Help</a></li>
                 <li><a href="/tools/tracker.html">Strain Tracker</a></li>
-                <li><a href="/tools/seeds.html">Browse Strains</a></li>
+                <li><a href="/tools/seeds.html">Explore Strains</a></li>
                 <li><a href="/tools/labels.html">AI Branding</a></li>
 				<li><a href="/tools/growitgame.html">Manage Grow</a></li>
             </ul>
