--- a/tools/growhelp.html
+++ b/tools/growhelp.html
@@ -542,23 +542,12 @@
     </style>
 </head>
 <body>
-	<header>
-		<a href="https://www.strainnavigator.com/" class="home-link" target="_blank" rel="noopener noreferrer">
-			🏠 HOME
-		</a>
-		<a href="https://www.strainnavigator.com/tools/seeds.html" class="site-link" target="_blank" rel="noopener noreferrer">
-			<img src="/tools/strains/img/Pink_Leaf.png" class="leaf-icon" alt="leaf"> STRAIN TRACKER
-		</a>
-		<a href="https://www.strainnavigator.com/shop/" class="site-link" target="_blank" rel="noopener noreferrer">
-			🛒 SHOP
-		</a>
-	</header>
 	
     <div class="conversation-container" id="conversation-container">
         <div class="initial-state" id="initial-state">
 			
-			<a href="https://www.strainnavigator.com.com" target="_blank" rel="noopener noreferrer">
-				<img src="/tools/strains/logos/revdrtolerant-logo.png" alt="Green Wrld Logo" class="logo">
+			<a href="https://www.strainnavigator.com" target="_blank" rel="noopener noreferrer">
+				<img src="/tools/strains/logos/revdrtolerant-logo.png" alt="StrainNavigator Logo" class="logo">
 			</a>       
 			
             <div>
