--- a/tools/labels.html
+++ b/tools/labels.html
@@ -39,7 +39,7 @@
 			align-items: center;
 			margin-top: 0 !important;
 		}
-		
+
 		body {
 			background-color: #F9FFF9;
 			color: var(--text-color);
@@ -83,21 +83,41 @@
 
 		.container {
 			max-width: 1200px;
-			margin: 100px auto 0 auto; /* 100px top margin to account for nav bar height */
+			margin: 100px auto 100px auto; /* Top and bottom margin */
 			padding: 0 1rem;
 			display: grid;
 			grid-template-columns: 1fr 1fr;
 			gap: 0.75rem;
+			position: relative; /* Add this */
+			left: 0 !important; /* Add this */
+			transform: none !important; /* Add this */
 		}
 
-		.chat-container, .image-container {
+		.chat-container {
 			background-color: white;
 			border-radius: 10px;
 			box-shadow: var(--shadow);
 			overflow: hidden;
 			display: flex;
 			flex-direction: column;
-			height: 700px;
+			height: 800px !important;
+			max-height: 800px !important;
+			min-height: 800px !important;
+		}
+
+		.image-container {
+			background-color: white;
+			border-radius: 10px;
+			box-shadow: var(--shadow);
+			overflow: visible;
+			display: flex;
+			flex-direction: column;
+			height: auto !important;
+			min-height: 800px;
+		}
+
+		.chat-container, .image-container {
+			width: 100%; /* Add this */
 		}
 
 		.chat-header, .image-header {
@@ -122,6 +142,8 @@
 		.chat-messages {
 			flex: 1;
 			padding: 0.75rem;
+			height: 600px;
+			max-height: 600px;
 			overflow-y: auto;
 		}
 
@@ -223,8 +245,10 @@
 			justify-content: space-between;
 		}
 
+		/* Fixed height for image area */
 		.image-display {
-			flex: 1;
+			flex: 0 0 auto;
+			height: 450px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -232,7 +256,6 @@
 			position: relative;
 			overflow: hidden;
 			background-color: #f5f5f5;
-			min-height: 450px;
 		}
 
 		.image-display img {
@@ -263,16 +286,44 @@
 			100% { transform: translate(-50%, -50%) rotate(360deg); }
 		}
 
-		.image-controls {
+		/* Fixed height for thumbnail gallery */
+		.thumbnail-gallery {
+			flex: 0 0 auto;
+			height: 80px;
+			display: flex;
+			overflow-x: auto;
 			padding: 0.5rem;
+			gap: 0.5rem;
+			background-color: rgba(0,0,0,0.03);
+			margin-top: 0.5rem;
+		}
+
+		.thumbnail {
+			width: 60px;
+			height: 60px;
+			border-radius: 4px;
+			object-fit: cover;
+			cursor: pointer;
+			box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+			transition: transform 0.2s ease;
+		}
+
+		.thumbnail:hover {
+			transform: scale(1.05);
+		}
+
+		/* Ensure image controls are always visible with no scroll */
+		.image-controls {
+			height: auto !important;
+			padding: 1rem;
 			background-color: #f9f9f9;
 			border-top: 1px solid #eee;
-			height: auto;
-			overflow: visible;
+			overflow: visible !important;
+			min-height: 300px;
 		}
 
 		.options-group {
-			margin-bottom: 0.4rem;
+			margin-bottom: 1.5rem;
 		}
 
 		.options-group label {
@@ -317,12 +368,15 @@
 			box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.2);
 		}
 
+		/* Style tags area with no overflow limit */
 		.style-tags {
 			display: flex;
 			flex-wrap: wrap;
 			gap: 0.4rem;
 			margin-top: 0.4rem;
-			overflow: visible;
+			margin-bottom: 1.5rem;
+			min-height: 40px;
+			overflow: visible !important;
 		}
 
 		.style-tag {
@@ -480,7 +534,7 @@
 		}
 
 		.bottom-margin {
-			margin-bottom: 40px;
+			margin-bottom: 80px;
 		}
 
 		/* QR CODE STYLES */
@@ -556,30 +610,6 @@
 
 		.qr-button:hover {
 			background-color: var(--dark-color);
-		}
-
-		.thumbnail-gallery {
-			display: flex;
-			overflow-x: auto;
-			padding: 0.5rem;
-			gap: 0.5rem;
-			background-color: rgba(0,0,0,0.03);
-			margin-top: 0.5rem;
-			max-height: 80px;
-		}
-
-		.thumbnail {
-			width: 60px;
-			height: 60px;
-			border-radius: 4px;
-			object-fit: cover;
-			cursor: pointer;
-			box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-			transition: transform 0.2s ease;
-		}
-
-		.thumbnail:hover {
-			transform: scale(1.05);
 		}
 
 		/* Toggle QR code switch */
