--- a/tools/labels.html
+++ b/tools/labels.html
@@ -82,15 +82,11 @@
 		}
 
 		.container {
-			max-width: 1200px;
-			margin: 100px auto 100px auto; /* Top and bottom margin */
-			padding: 0 1rem;
 			display: grid;
 			grid-template-columns: 1fr 1fr;
-			gap: 0.75rem;
-			position: relative; /* Add this */
-			left: 0 !important; /* Add this */
-			transform: none !important; /* Add this */
+			width: 100%;
+			max-width: 1200px;
+			margin: 100px auto;
 		}
 
 		.chat-container {
@@ -117,7 +113,10 @@
 		}
 
 		.chat-container, .image-container {
-			width: 100%; /* Add this */
+			width: 100%;
+			min-width: 0;
+			max-width: 100%;
+			flex-basis: 100%;
 		}
 
 		.chat-header, .image-header {
@@ -288,14 +287,27 @@
 
 		/* Fixed height for thumbnail gallery */
 		.thumbnail-gallery {
-			flex: 0 0 auto;
+			position: absolute;
+			width: 100%;
+			left: 0;
+			right: 0;
 			height: 80px;
-			display: flex;
 			overflow-x: auto;
+			overflow-y: hidden;
+			white-space: nowrap;
+			display: flex;
+			flex-wrap: nowrap;
 			padding: 0.5rem;
 			gap: 0.5rem;
 			background-color: rgba(0,0,0,0.03);
 			margin-top: 0.5rem;
+			z-index: 10;
+		}
+
+		.image-container {
+			width: 100%;
+			max-width: 100%;
+			overflow-x: hidden; /* Prevent horizontal overflow */
 		}
 
 		.thumbnail {
