--- a/tools/labels.html
+++ b/tools/labels.html
@@ -1591,37 +1591,84 @@
             // Function to populate style selector
             function populateStyleSelector() {
                 // An abbreviated list of styles - you can expand this with more from your provided list
-                const styles = [
-                    { text: "Anime", value: "anime:1.3, line drawing, asian influence, vibrant colors, cel shading, large expressive eyes, detailed hair, dynamic poses" },
-                    { text: "Art Deco", value: "art deco, geometric shapes, rich colors, lavish ornamentation, luxorious, symmetry, detailed, elegant" },
-                    { text: "Cyberpunk", value: "cyberpunk, futuristic, neon colors, dark atmosphere, highly detailed, neon lights, urban, dystopian, high-tech" },
-                    { text: "Digital Painting", value: "digital painting, smooth gradients, vibrant colors, highly detailed" },
-                    { text: "Fantasy Art", value: "fantasy art, imaginative, vibrant colors, mythical creatures, detailed, epic, magical, dynamic, mythical, highly detailed" },
-                    { text: "Hyperrealism", value: "hyperrealism, extremely detailed, lifelike, photographic, high contrast, textures, meticulous, natural colors, precise" },
-                    { text: "Nature Art", value: "nature art, natural elements, organic, detailed, highly detailed" },
-                    { text: "Photorealism", value: "photorealism, extremely detailed, lifelike, high contrast, textures, meticulous, realistic" },
-                    { text: "Pop Art", value: "pop art, bold colors, commercial imagery, comic strip style, repetition, detailed, vibrant" },
-                    { text: "Psychedelic Art", value: "psychedelic art, vibrant colors, abstract, trippy, highly detailed, imaginative" },
-                    { text: "Surrealism", value: "surrealism, dream-like, bizarre, abstract, fantastical, juxtapositions, detailed, strange, whimsical" },
-                    { text: "Vaporwave", value: "vaporwave, 80s aesthetic, neon colors, glitch art, nostalgic, surreal, detailed, retro" },
-                    { text: "Watercolor", value: "watercolor painting, soft edges, pastel colors, natural textures, highly detailed" },
-					{ text: "Minimalist", value: "minimalist design, clean, elegant, simple, modern packaging" },
-					{ text: "Luxury", value: "luxury packaging, premium, gold accents, high-end, sophisticated design" },
-					{ text: "Vintage", value: "vintage label, retro packaging, classic design, nostalgic, aged paper texture" },
-					{ text: "Medical", value: "medical cannabis packaging, pharmaceutical style, clinical, professional, health-focused" },
-					{ text: "Organic", value: "organic product packaging, natural elements, eco-friendly, plant motifs, earth tones" },
-					{ text: "Psychedelic", value: "psychedelic art, vibrant colors, trippy, abstract patterns, 60s inspired" },
-					{ text: "Hipster", value: "hipster design, artisanal, handcrafted look, indie aesthetic, craft cannabis" },
-					{ text: "Corporate", value: "corporate branding, professional, clean lines, business-like, corporate identity" },
+				const styles = [
+					// Traditional Art Styles
+					{ text: "Oil Painting", value: "oil painting:1.2, canvas texture, brush strokes, vivid colors, realistic, hyperdetailed" },
+					{ text: "Watercolor", value: "watercolor painting, soft edges, pastel colors, natural textures, highly detailed" },
+					{ text: "Sketch", value: "sketch, pencil drawing, line art, detailed shading, monochromatic, artistic" },
+					{ text: "Ink Wash", value: "ink wash, traditional, monochromatic, flowing, highly detailed" },
+
+
+
+					// Commercial & Branding Styles
+
+
+					// Classical Art Movements
+					{ text: "Impressionism", value: "impressionism, light brushstrokes, soft brushstrokes, vibrant colors, everyday scenes, highly detailed, atmospheric" },
+					{ text: "Art Nouveau", value: "art nouveau, decorative, flowing lines, detailed, organic shapes, floral patterns, vibrant colors, intricate, elegant" },
+					{ text: "Art Deco", value: "art deco, geometric shapes, rich colors, lavish ornamentation, luxurious, symmetry, detailed, elegant" },
+					{ text: "Renaissance", value: "renaissance, detailed, realistic, classical themes, balanced composition, muted colors, humanism, light and shadow" },
+					{ text: "Baroque", value: "baroque, dramatic, detailed, grandiose, dark shadows, bright highlights, dynamic, rich colors" },
+
+					// Modern Art Movements
+					{ text: "Cubism", value: "cubism, abstract, geometric shapes, fragmented, highly detailed, fragmented objects, multiple perspectives, muted colors" },
+					{ text: "Surrealism", value: "surrealism, dream-like, bizarre, abstract, fantastical, juxtapositions, detailed, strange, whimsical" },
+					{ text: "Pop Art", value: "pop art, bold colors, commercial imagery, comic strip style, repetition, detailed, vibrant" },
+					{ text: "Abstract", value: "abstract art, non-representational, expressive, vibrant colors, spontaneous, bold shapes" },
+					{ text: "Minimalism", value: "minimalism, simple, clean lines, modern, monochromatic, basic shapes, less is more" },
+
+					// Digital & Contemporary
+					{ text: "Digital Painting", value: "digital painting, smooth gradients, vibrant colors, highly detailed" },
+					{ text: "Concept Art", value: "concept art, imaginative, detailed, sketch-like, highly detailed" },
+					{ text: "Hyperrealism", value: "hyperrealism, extremely detailed, lifelike, photographic, high contrast, textures, meticulous, natural colors, precise" },
+					{ text: "Photorealism", value: "photorealism, extremely detailed, lifelike, high contrast, textures, meticulous, realistic" },
+					{ text: "Low Poly", value: "low poly, geometric, stylized, clean lines, highly detailed" },
+
+					// Cultural & Regional
+					{ text: "Ukiyo-e", value: "ukiyo-e style, Japanese woodblock prints, flat areas of color, detailed patterns, subjects from history and mythology" },
+					{ text: "Graffiti", value: "graffiti, urban, vibrant colors, bold lines, highly detailed" },
+					{ text: "Folk Art", value: "folk art, traditional, cultural, vibrant colors, highly detailed, handcrafted" },
+
+					// Visual Media Styles
+					{ text: "Anthro", value: "anthropomorphic character, humanoid with animal traits, detailed fur texture, expressive features, natural pose, seamless hybrid anatomy, realistic animal features, high detail on face and body, balanced human and animal elements" },
+					{ text: "Anime", value: "anime:1.3, line drawing, asian influence, vibrant colors, cel shading, large expressive eyes, detailed hair, dynamic poses" },
+					{ text: "Manga", value: "manga style, Japanese comics, black and white, unique character designs, detailed backgrounds, highly detailed" },
+					{ text: "Cartoon", value: "2D, cartoon, flat, vibrant, drawn, animation, illustration, exaggerated features, expressive poses, whimsical" },
+					{ text: "Pixel Art", value: "pixel art, low-res, blocky, digital, 8-bit, highly detailed" },
+					{ text: "Comic Book", value: "comic style, muted colors, illustration, cartoon, soothing tones, low saturation" },
+					{ text: "Character Cartoon", value: "cartoon character illustration, bold black outlines, vibrant colors, cel shading, dynamic composition, expressive features, comic book style typography, glossy finish" },
+					{ text: "Pop Surreal", value: "pop surrealism, bold colors, cartoon realism, symbolic imagery, dreamlike elements, commercial illustration style, vibrant typography, striking color contrasts" },
+					{ text: "Lowbrow Art", value: "lowbrow art style, underground comix, irreverent humor, bold colors, pop surrealism, detailed illustration, exaggerated characters, street art influence, cartoon realism" },
+					{ text: "Fantasy Realism", value: "fantasy character illustration, detailed rendering, dramatic lighting, realistic textures, fantasy creature, magical atmosphere, fiery background, hyperdetailed, digital painting technique" },					
+					{ text: "Illustrated Logo", value: "commercial illustration, brand mascot, bold typography, clean outlines, vibrant color palette, professional product art, dynamic composition, marketing illustration style" },					
+
+					// Specialized Themes
+					{ text: "Fantasy Art", value: "fantasy art, imaginative, vibrant colors, mythical creatures, detailed, epic, magical, dynamic, mythical, highly detailed" },
+					{ text: "Sci-Fi", value: "sci-fi, futuristic, imaginative, detailed, highly detailed" },
+					{ text: "Gothic", value: "gothic art, dark, dramatic, detailed, religious themes, intricate, medieval, somber, highly detailed, ornate" },
+					{ text: "Steampunk", value: "steampunk, Victorian era, mechanical, detailed, gears, brass, leather, intricate, retro-futuristic" },
+					{ text: "Cyberpunk", value: "cyberpunk, futuristic, neon colors, dark atmosphere, highly detailed, neon lights, urban, dystopian, high-tech" },
+
+					// Contemporary Aesthetics
+					{ text: "Vaporwave", value: "vaporwave, 80s aesthetic, neon colors, glitch art, nostalgic, surreal, detailed, retro" },
+					{ text: "Retrowave", value: "retrowave, 80s aesthetic, neon colors, vibrant, highly detailed" },
+					{ text: "Glitch Art", value: "glitch art, digital distortion, abstract, vibrant colors, highly detailed" },
+					{ text: "Psychedelic", value: "psychedelic art, vibrant colors, abstract, trippy, highly detailed, imaginative" },
+					{ text: "Nature Art", value: "nature art, natural elements, organic, detailed, highly detailed" },
+
+					// Commercial & Design
+					{ text: "Luxury", value: "luxury design, premium, gold accents, high-end, sophisticated, elegant typography" },
+					{ text: "Corporate", value: "corporate style, professional, clean lines, business-like, corporate identity, structured" },
+					{ text: "Vintage", value: "vintage, nostalgic, detailed, classic, aged texture, retro elements" },
+					{ text: "Minimalist Design", value: "minimalist design, clean, elegant, simple, modern, ample negative space" },
 					{ text: "Illustrated", value: "hand-drawn illustration, artistic, detailed artwork, creative, unique illustration" },
-					{ text: "Holographic", value: "holographic elements, iridescent, futuristic, shimmering effect, modern" },
-					{ text: "Modern", value: "modern logo design, clean lines, simple, professional, contemporary" },
-					{ text: "Tech", value: "technology brand, digital, innovative, futuristic, tech logo design" },
-					{ text: "Retro", value: "retro logo, vintage typography, classic brand elements, nostalgic" },
-					{ text: "Elegant", value: "elegant brand design, sophisticated, refined, luxury branding" },
-					{ text: "Handcrafted", value: "handcrafted logo, artisanal brand, rustic, authentic, textured" },
-					{ text: "Playful", value: "playful logo design, fun, colorful, creative, whimsical branding" },
-					{ text: "Geometric", value: "geometric logo, abstract shapes, clean design, modern brand identity" }
+
+					// Specialized Commercial
+					{ text: "Product Photography", value: "product photography style, sharp details, clean background, professional lighting, commercial" },
+					{ text: "Fashion", value: "fashion photography style, stylish, glamorous, editorial, vibrant, expressive, detailed" },
+					{ text: "Architectural", value: "architectural photography style, symmetrical, detailed, geometric, grand, structured, atmospheric" },
+					{ text: "Food Photography", value: "food photography style, appetizing, detailed, colorful, styled, culinary art" },
+					{ text: "Cinematic", value: "cinematic look:1.4, soothing tones, insane details, intricate details, low contrast, soft cinematic light, exposure blend, hdr" }
 				];
                 
 				// Check if styles array is empty
