--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 	<!-- Theme color for browser UI -->
 	<meta name="theme-color" content="#166534">	
+	<script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/427e0da283b09796d6ad6a75d768b44f.js"></script>
     <title>StrainNavigator - Your Cannabis Growing Assistant</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
