--- a/index.html
+++ b/index.html
@@ -457,6 +457,16 @@
 					</div>
 				</div>
 			</a>
+
+			<a href="/tools/writer.html" class="feature-card-link">
+				<div class="feature-card">
+					<div class="feature-img" style="background-image: url('/tools/img/AIWriter.jpg');"></div>
+					<div class="feature-content">
+						<h3>AI Release Writer</h3>
+						<p>Create short release post and image for showcasing a new seedline or strain with our AI-powered writer and listen as the results are read back to you.</p>
+					</div>
+				</div>
+			</a>
 			
 			<a href="/tools/growitgame.html" class="feature-card-link">
 				<div class="feature-card">
