--- a/tools/labels.html
+++ b/tools/labels.html
@@ -986,7 +986,7 @@
 
 			function createWeedLeafSvg() {
 				const svg = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-					<path d="M50,15 C50,15 20,30 20,60 C20,75 35,80 45,70 C45,70 45,85 50,95 C55,85 55,70 55,70 C65,80 80,75 80,60 C80,30 50,15 50,15 Z" fill="green"/>
+					<path d="M50,10 C50,10 45,30 35,40 C25,50 10,50 10,60 C10,70 20,75 30,70 C40,65 45,55 45,55 C45,55 30,80 50,95 C70,80 55,55 55,55 C55,55 60,65 70,70 C80,75 90,70 90,60 C90,50 75,50 65,40 C55,30 50,10 50,10 Z" fill="green"/>
 				</svg>`;
 				return 'data:image/svg+xml;base64,' + btoa(svg);
 			}
