--- a/tools/labels.html
+++ b/tools/labels.html
@@ -985,25 +985,13 @@
 				return 'data:image/svg+xml;base64,' + btoa(svg);
 			}
 
-			function createWeedLeafOverlay() {
-				// Create a div element to hold the Font Awesome icon
-				const weedLeafDiv = document.createElement('div');
-				weedLeafDiv.style.position = 'absolute';
-				weedLeafDiv.style.display = 'flex';
-				weedLeafDiv.style.alignItems = 'center';
-				weedLeafDiv.style.justifyContent = 'center';
-				weedLeafDiv.style.color = '#00AA00'; // Green color
-				weedLeafDiv.style.zIndex = '100';
-				
-				// Add the Font Awesome cannabis icon
-				const icon = document.createElement('i');
-				icon.className = 'fas fa-cannabis fa-fw';
-				icon.style.width = '100%';
-				icon.style.height = '100%';
-				icon.style.fontSize = '100%';
-				
-				weedLeafDiv.appendChild(icon);
-				return weedLeafDiv;
+			function createWeedLeafSvg() {
+				// Use Font Awesome's cannabis icon SVG path - same approach as your twentyOneSvg
+				const svg = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+					<circle cx="50" cy="50" r="45" fill="transparent"/>
+					<text x="50" y="70" font-family="'Font Awesome 5 Free'" font-size="70" font-weight="900" fill="#00AA00" text-anchor="middle">&#xf55f;</text>
+				</svg>`;
+				return 'data:image/svg+xml;base64,' + btoa(svg);
 			}
 
 			twentyOneDataUrl = createTwentyOneSvg();
