--- a/tools/labels.html
+++ b/tools/labels.html
@@ -6,6 +6,7 @@
     <title>AI BRANDING ASSISTANT</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.js"></script>
     <style>
 		:root {
 			--primary-color: #2E7D32;
