--- a/tools/labels.html
+++ b/tools/labels.html
@@ -760,7 +760,7 @@
             <div class="image-controls">
                 <div class="options-group">
                     <div class="checkbox-option">
-                        <input type="checkbox" id="enhanceOption" checked>
+                        <input type="checkbox" id="enhanceOption">
                         <label for="enhanceOption">Enhance (improve prompt quality)</label>
                     </div>
                     <div class="checkbox-option">
