--- a/tools/banked.html
+++ b/tools/banked.html
@@ -207,6 +207,8 @@
             flex-direction: column;
             align-items: flex-end;
             min-width: 80px;
+            max-width: 120px;
+            margin-left: 8px;
         }
         
         .seed-count {
@@ -226,10 +228,9 @@
             border-radius: 3px;
             font-size: 0.65rem;
             text-align: center;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 90px;
+            white-space: normal;
+            word-break: break-word;
+            min-width: 80px;
         }
         
         .run-mark {
