--- a/tools/manager.html
+++ b/tools/manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
-    <title>Seeds Banked - ᵗʰᵉ Rev™</title>
+    <title>STRAINNAVIGATOR.COM SEED BANK MANAGER</title>
     <style>
         :root {
             --cannabis-green: #2D5E32;
