--- a/tools/manager.html
+++ b/tools/manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
-    <title>STRAINNAVIGATOR.COM SEED BANK MANAGER</title>
+    <title>STRAINNAVIGATOR SEED BANK MANAGER</title>
     <style>
         :root {
             --cannabis-green: #2D5E32;
@@ -488,7 +488,7 @@
             <!-- Empty for now, could add a logo -->
         </div>
         <div class="header-center">
-            <div class="subtitle">Seeds Banked - ᵗʰᵉ Rev™</div>
+            <div class="subtitle">STRAINNAVIGATOR SEED BANK MANAGER</div>
         </div>
         <div class="header-right">
             <div class="user-profile">
@@ -502,7 +502,7 @@
         <!-- Auth Container - Shown only when not logged in -->
 		<div id="auth-container" class="tab-container" style="display: block;">
 			<div class="placeholder-message">
-				<h3>Welcome to Seed Collection Manager</h3>
+				<h3>Welcome to STRAINNAVIGATOR Seed Bank Manager</h3>
 				<p>Please sign in with your Google account to manage your seed collection.</p>
 				<div id="g_id_onload"
 					 data-client_id="1084684082826-tm0q6a2n0akgft065ie5irgth1fogo7c.apps.googleusercontent.com"
