--- a/index.html
+++ b/index.html
@@ -508,6 +508,10 @@
 			<li><a href="https://discord.gg/jujYC9atYQ" target="_blank"><i class="fab fa-discord"></i></a></li>
 		</ul>
         <p>For educational and informational purposes only.</p>
+		<p>
+			<a href="/policy.html" style="color: white; margin: 0 10px; text-decoration: underline;">Privacy Policy</a> | 
+			<a href="/terms.html" style="color: white; margin: 0 10px; text-decoration: underline;">Terms of Service</a>
+		</p>		
     </footer>
     
     <script>
