--- a/tools/growhelp.html
+++ b/tools/growhelp.html
@@ -861,19 +861,30 @@
 			const tempDiv = document.createElement('div');
 			tempDiv.innerHTML = htmlContent;
 			
+			// Remove the signature part if it exists
+			const signatureText = "StrainNavigator Grow Guide";
+			let text = tempDiv.textContent;
+			
+			// Find and remove the signature part
+			const signatureIndex = text.lastIndexOf(signatureText);
+			if (signatureIndex !== -1) {
+				text = text.substring(0, signatureIndex).trim();
+			}
+			
 			// Get text content, preserving paragraph structure
-			let text = '';
+			// Limit to first 3-4 paragraphs for voice
 			const paragraphs = tempDiv.querySelectorAll('p');
 			
 			if (paragraphs.length) {
 				// If we have paragraphs, use them (up to first 3-4)
+				text = '';
 				const maxParagraphs = Math.min(paragraphs.length, 3);
 				for (let i = 0; i < maxParagraphs; i++) {
-					text += paragraphs[i].textContent + ' ';
+					// Skip paragraph if it contains the signature
+					if (!paragraphs[i].textContent.includes(signatureText)) {
+						text += paragraphs[i].textContent + ' ';
+					}
 				}
-			} else {
-				// Otherwise just get the raw text
-				text = tempDiv.textContent;
 			}
 			
 			// Clean up the text
