--- a/tools/growhelp.html
+++ b/tools/growhelp.html
@@ -863,27 +863,44 @@
 			
 			// Remove the signature part if it exists
 			const signatureText = "StrainNavigator Grow Guide";
-			let text = tempDiv.textContent;
 			
-			// Find and remove the signature part
-			const signatureIndex = text.lastIndexOf(signatureText);
-			if (signatureIndex !== -1) {
-				text = text.substring(0, signatureIndex).trim();
-			}
-			
-			// Get text content, preserving paragraph structure
-			// Limit to first 3-4 paragraphs for voice
+			// Get paragraphs and list items
 			const paragraphs = tempDiv.querySelectorAll('p');
+			const listItems = tempDiv.querySelectorAll('li');
 			
+			let text = '';
+			
+			// Process paragraphs (up to first 3-4)
 			if (paragraphs.length) {
-				// If we have paragraphs, use them (up to first 3-4)
-				text = '';
 				const maxParagraphs = Math.min(paragraphs.length, 3);
 				for (let i = 0; i < maxParagraphs; i++) {
 					// Skip paragraph if it contains the signature
 					if (!paragraphs[i].textContent.includes(signatureText)) {
 						text += paragraphs[i].textContent + ' ';
 					}
+				}
+			}
+			
+			// Process list items (all of them, or up to a reasonable number)
+			if (listItems.length) {
+				// Add a brief pause before starting the list
+				text += '. ';
+				
+				const maxItems = Math.min(listItems.length, 10); // Limit to 10 items max
+				for (let i = 0; i < maxItems; i++) {
+					if (!listItems[i].textContent.includes(signatureText)) {
+						// Add the item number for ordered lists
+						text += `Item ${i+1}. ${listItems[i].textContent}. `;
+					}
+				}
+			}
+			
+			// If we didn't get anything from paragraphs or lists, fall back to full text
+			if (!text) {
+				text = tempDiv.textContent;
+				const signatureIndex = text.lastIndexOf(signatureText);
+				if (signatureIndex !== -1) {
+					text = text.substring(0, signatureIndex).trim();
 				}
 			}
 			
