--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Open Graph meta tags (for Facebook, Discord, etc.) -->
 	<meta property="og:title" content="StrainNavigator - Cannabis Genetics Tracker">
 	<meta property="og:description" content="Track and manage cannabis strain genetics, breeding projects, and cultivation details with AI assistance.">
-	<meta property="og:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=1">
+	<meta property="og:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=2">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:url" content="https://www.strainnavigator.com">
@@ -20,7 +20,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="StrainNavigator - Cannabis Genetics Tracker">
 	<meta name="twitter:description" content="AI-powered cannabis strain tracking and breeding assistant for serious cultivators.">
-	<meta name="twitter:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg">
+	<meta name="twitter:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=2">
 
 	<!-- Theme color for browser UI -->
 	<meta name="theme-color" content="#166534">	
