--- a/tools/planner.html
+++ b/tools/planner.html
@@ -849,7 +849,8 @@
             const savedDiagramsList = document.getElementById('saved-diagrams-list');
             const cancelLoadBtn = document.getElementById('cancel-load-btn');
             const confirmLoadBtn = document.getElementById('confirm-load-btn');
-            
+            const renamePlanModal = document.getElementById('rename-plan-modal');
+			
             // Context Menu
             const nodeContextMenu = document.getElementById('node-context-menu');
             const contextEdit = document.getElementById('context-edit');
