--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Open Graph meta tags (for Facebook, Discord, etc.) -->
 	<meta property="og:title" content="StrainNavigator - Cannabis Genetics Tracker">
 	<meta property="og:description" content="Track and manage cannabis strain genetics, breeding projects, and cultivation details with AI assistance.">
-	<meta property="og:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=2">
+	<meta property="og:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=1">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:url" content="https://www.strainnavigator.com">
@@ -20,7 +20,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="StrainNavigator - Cannabis Genetics Tracker">
 	<meta name="twitter:description" content="AI-powered cannabis strain tracking and breeding assistant for serious cultivators.">
-	<meta name="twitter:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg?v=2">
+	<meta name="twitter:image" content="https://www.strainnavigator.com/strain-navigator-preview.jpg">
 
 	<!-- Theme color for browser UI -->
 	<meta name="theme-color" content="#166534">	
@@ -546,6 +546,12 @@
 					imageUrl: "/tools/img/partners/GreenWrld_social.jpg",
 					siteUrl: "https://greenwrldexclusive.com/"
 				},
+				{
+					name: "DWARVENFORGED PREMIUM GENETICS",
+					description: "Bringing legendary strains to growers at prices that won't break the bank.",
+					imageUrl: "/tools/img/partners/dwarvenforged-preview.jpg",
+					siteUrl: "https://greenwrldexclusive.com/"
+				},				
 				// Add more partner sites as needed
 			];
 
