--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 					<div class="feature-img" style="background-image: url('/tools/img/partners/dwarvenforged-preview.jpg');"></div>
 					<div class="feature-content">
 						<div>
-							<h3>DWARVENFORGED PREMIUM GENETICS</h3>
+							<h3>Dwarvenforged Premium Genetics</h3>
 							<p>Bringing legendary strains to growers at prices that won't break the bank.</p>
 						</div>
 						<div class="partner-cta">
