--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 				</div>
 			</a>
 
-			<a href="https://greenwrldexclusive.com/" class="feature-card-link" target="_blank" rel="noopener noreferrer">
+			<a href="https://www.dwarvenforged.com/" class="feature-card-link" target="_blank" rel="noopener noreferrer">
 				<div class="feature-card partner-card">
 					<div class="feature-img" style="background-image: url('/tools/img/partners/dwarvenforged-preview.jpg');"></div>
 					<div class="feature-content">
