--- a/index.html
+++ b/index.html
@@ -416,7 +416,17 @@
             <p>Your ultimate cannabis growing assistant. Track strains, get AI-powered grow help, create custom labels, and manage your grow spaces all in one place.</p>
         </section>
         
-		<section class="features">
+		<section class="features"> 
+			<a href="/tools/planner.html" class="feature-card-link">
+				<div class="feature-card">
+					<div class="feature-img" style="background-image: url('/tools/img/Planner.jpg');"></div>
+					<div class="feature-content">
+						<h3>Breeding Planner</h3>
+						<p>Add your strain spreadsheet and plan your next breeding projects. Use drag and drop to show your new strain line lineage.</p>
+					</div>
+				</div>
+			</a>
+
 			<a href="/tools/growhelp.html" class="feature-card-link">
 				<div class="feature-card">
 					<div class="feature-img" style="background-image: url('/tools/img/AIGrowHelp.jpg');"></div>
