--- a/tools/planner.html
+++ b/tools/planner.html
@@ -201,8 +201,8 @@
         
 		.canvas-tools {
 			position: fixed;
-			top: 70px; /* Adjust this value to position below the header */
-			left: 310px; /* Adjust this value to position after the sidebar */
+			top: 85px; /* Increased from 70px to add more space from header */
+			left: 310px;
 			z-index: 100;
 			display: flex;
 			gap: 5px;
@@ -230,7 +230,7 @@
         
 		.arrange-options {
 			position: fixed;
-			top: 70px; /* Adjust this value to position below the header */
+			top: 85px; /* Increased from 70px to add more space from header */
 			right: 10px;
 			z-index: 100;
 			display: flex;
