--- a/tools/planner.html
+++ b/tools/planner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <title>Strain Breeding Planner</title>
+    <title>StrainNavigator Breeding Planner</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, sans-serif;
@@ -684,7 +684,7 @@
 </head>
 <body>
     <header>
-        <h2>Strain Breeding Planner</h2>
+        <h2>StrainNavigator Breeding Planner</h2>
     </header>
     
     <div class="main-container">
