--- a/tools/planner.html
+++ b/tools/planner.html
@@ -1352,10 +1352,19 @@
 					document.getElementById('breeding-canvas').classList.toggle('minimal-view', isMinimalView);
 					updateToggleButton();
 					
-					// Update connections only, don't rearrange nodes
-					setTimeout(() => {
-						updateAllConnections();
-					}, 100);
+					// Set spacing based on current view mode
+					if (isMinimalView) {
+						// Use much tighter spacing for minimal view
+						nodeSpacing.horizontal = 100; // Down from 250
+						nodeSpacing.vertical = 40;   // Down from 120
+					} else {
+						// Reset to normal spacing
+						nodeSpacing.horizontal = 250;
+						nodeSpacing.vertical = 120;
+					}
+					
+					// Rearrange with new spacing values
+					arrangeTreeLayout();
 				});
 			}
 
