--- a/tools/planner.html
+++ b/tools/planner.html
@@ -737,31 +737,27 @@
 
 		.minimal-view .breeding-node {
 		  min-width: 120px;
-		  min-height: 24px;
-		  padding: 0;
+		  min-height: 28px;
 		  margin: 0;
 		}
 
 		.minimal-view .node-header {
-		  padding: 2px 6px;
+		  padding: 4px 8px;
 		  font-size: 11px;
-		  line-height: 1;
+		  line-height: 1.2;
 		}
 
 		.minimal-view .connection-points {
-		  padding: 0;
-		  margin: 0;
-		  height: 6px;
-		  position: absolute;
-		  bottom: 0;
+		  padding: 2px 0;
+		  height: auto;
 		  width: 100%;
+		  position: relative;
 		}
 
 		.minimal-view .connection-point {
 		  width: 10px;
-		  height: 3px;
-		  border-radius: 0;
-		  margin-top: -3px;
+		  height: 4px;
+		  border-radius: 1px;
 		}
 		
     </style>
