--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 	<script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/427e0da283b09796d6ad6a75d768b44f.js"></script>
     <title>StrainNavigator - Your Cannabis Growing Assistant</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	
     <style>
         :root {
             --primary-green: #2e7d32;
