--- a/index.html
+++ b/index.html
@@ -543,6 +543,23 @@
 					</div>
 				</div>
 			</a>
+
+			<a href="https://www.blowflowcreationz.com/" class="feature-card-link" target="_blank" rel="noopener noreferrer">
+				<div class="feature-card partner-card">
+					<div class="feature-img" style="background-image: url('/tools/img/partners/blowflowcreationz-preview.jpg');"></div>
+					<div class="feature-content">
+						<div>
+							<h3>Blow Flow Creationz</h3>
+							<p>Exceptional Collectables carefully bred for unique characteristics, exceptional quality and distinctive profiles.</p>
+						</div>
+						<div class="partner-cta">
+							<span class="visit-button">
+								Visit Site <i class="fas fa-external-link-alt"></i>
+							</span>
+						</div>
+					</div>
+				</div>
+			</a>
 			
 		</section>
 
