--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 					<div class="feature-content">
 						<div>
 							<h3>Blow Flow Creationz</h3>
-							<p>Exceptional Collectables carefully bred for unique characteristics, exceptional quality and distinctive profiles.</p>
+							<p>Exceptional collectables carefully bred for unique characteristics, exceptional quality and distinctive profiles.</p>
 						</div>
 						<div class="partner-cta">
 							<span class="visit-button">
