--- a/index.html
+++ b/index.html
@@ -433,6 +433,16 @@
 				</div>
 			</a>
 
+			<a href="/tools/winnerscircle.html" class="feature-card-link">
+				<div class="feature-card">
+					<div class="feature-img" style="background-image: url('/tools/img/WinnersCircle.jpg');"></div>
+					<div class="feature-content">
+						<h3>Winner's Circle</h3>
+						<p>Need to do a giveaway? Have a bunch of users in Discord waiting for a spin? Join the WINNER'S CIRCLE!</p>
+					</div>
+				</div>
+			</a>
+			
 			<a href="/tools/growhelp.html" class="feature-card-link">
 				<div class="feature-card">
 					<div class="feature-img" style="background-image: url('/tools/img/AIGrowHelp.jpg');"></div>
