--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		}
 
 		.feature-img {
-			height: 200px;
+			height: 100%;
 			background-size: cover;
 			background-position: center;
 			border-bottom: 3px solid var(--light-green); /* Add a border to separate image from content */
