--- a/tools/winnerscircle.html
+++ b/tools/winnerscircle.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Basic Meta Tags -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Winner's Circle - An interactive random name picker and prize wheel tool. Perfect for choosing winners, making decisions, or adding excitement to your events and giveaways.">
+
+	<!-- Open Graph Meta Tags for Facebook, LinkedIn, etc. -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://www.strainnavigator.com/tools/winnerscircle.html">
+	<meta property="og:title" content="Winner's Circle - Random Name Picker & Prize Wheel">
+	<meta property="og:description" content="A beautiful and customizable wheel spinner for random selections, contests, giveaways and decision making. Easy to use with no sign-up required.">
+	<meta property="og:image" content="https://www.strainnavigator.com/tools/img/social-preview.jpg?v=1">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="630">
+	<meta property="og:site_name" content="Strain Navigator Tools">
+
+	<!-- Twitter Card Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:url" content="https://www.strainnavigator.com/tools/winnerscircle.html">
+	<meta name="twitter:title" content="Winner's Circle - Random Name Picker & Prize Wheel">
+	<meta name="twitter:description" content="A beautiful and customizable wheel spinner for random selections, contests, giveaways and decision making. Easy to use with no sign-up required.">
+	<meta name="twitter:image" content="https://www.strainnavigator.com/tools/img/social-preview.jpg?v=1">
+
+	<!-- Additional Meta Tags -->
+	<meta name="robots" content="index, follow">
+	<meta name="author" content="Strain Navigator">
+	<meta name="theme-color" content="#ff5252">
     <title>Winner's Circle</title>
     <style>
         :root {
